# QueenSkin-Editor

./: .gitignore  Build QueenSkin Signed + Notarized.command  Launch QueenSkin Editor.command  README.md  slim UV.mtl  wide UV.mtl
.github/workflows/: build-installers.yml
docs/: macos-release-pipeline.md
scripts/macos/: build-signed-notarized.sh
scripts/windows/: build-exe.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: qse-document.icns
src-tauri/macos/: Info.plist
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsh
src-ui/: editor.css  editor.html  editor.js  index.html  library.css  library.html  library.js  theme.css  themed-icon.js
